# emberleaf

./: CONTRIBUTING.md  FIXED_CMAKE_LOOP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MODEL_SETUP_COMPLETE.md  Makefile  README.md  WAYLAND_FIX.md  config.toml.example  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
assets/audio/: README.md
assets/registry/: kws_registry.json
docs/: BE-001-kws.md  BE-002-biometrics.md  CI-Required-Checks.md  DECISIONS.md  DEMO-KWS-REAL.md  DEV_SETUP_SHERPA.md  INSTALL-Linux.md  KWS-REAL.md  PACKAGING-REL-002.md  PLATFORM_LINUX.md  QA-015-Manual-Test-Guide.md  QA-015-Report.md  QA-017-Manual-Test-Guide.md  QA-019-KWS-Smoke.md  RC-TEST-GUIDE-v1.0.0.md  RELEASE-v0.9.0-kws1.md  RELEASE.md  SECURITY.md  VALIDATION_MATRIX.md  events.md
docs/tickets/: QA-019C.md  QA-019D.md  REL-002C.md
scripts/: dev.sh  fetch_models.ps1  fetch_models.sh  install_sherpa_onnx.ps1  install_sherpa_onnx.sh  install_sherpa_onnx_binary.sh  install_sherpa_onnx_fixed.sh
scripts/qa/: run-kws-e2e.mjs
scripts/release/: package_appimage.sh  package_deb.sh
src/: App.css  App.tsx  App_BE015.tsx  App_OLD_backup.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/docs/: BE-001-kws.md
src-tauri/icons/: icon.icns
src-tauri/src/: display_backend.rs  lib.rs  main.rs  model_manager.rs  paths.rs  preflight.rs  registry.rs  validation.rs
src-tauri/src/audio/: kws.rs.backup  level.rs  mod.rs  monitor.rs  probe.rs  runtime.rs  test_tone.rs  vad.rs
src-tauri/src/audio/kws/: mod.rs  real.rs  stub.rs
src-tauri/src/ffi/: mod.rs  sherpa_onnx_bindings.rs
src-tauri/src/voice/: biometrics.rs  mod.rs
src/components/: AudioSettings.tsx  DeviceLossBanner.tsx  DevicePicker.tsx  DiagnoseAudio.tsx  KwsSettings.tsx  SimpleAudioHome.tsx
src/components/__tests__/: deviceLossHandlers.test.tsx
src/components/onboarding/: OnboardingWizard.tsx
src/lib/: ema.ts  errors.ts  tauriSafe.ts
src/lib/i18n/: index.ts  (+3 more)
src/test/: setup.ts
(+6 files in other folders)
